@startuml
class User
{
    + userId: string
}

package Domain{

    class TodoItemService{
        - _todosRepository: ITodosRepository ;
        + TodoItems: List<TodoItem>;
        + Create(description: string, dueDate: DateOnly): TodoItem
    }

    class TodoItem {
        + userId: string
        + id: string
        + description: String
        + createTime: DateOnly
        + DueDate: DateOnly
        + Tags: List<Tag>
        + ModificationHistory: List<Modification>
        + ModifyItem(description: String): void
    }

    class Modification{
        + timestamp: DateOnly
    }
    interface ITodosRepository{
        + FindByIdAsync(id: string?): TodoItem
        + CountTodoItemsByDueDate(dueDate: DateOnly): int
        + SaveAsync(TodoItem todoItem): void
    }
    class Tag{
        - Title: string

    }
}

package Controller{

}



package Infrastracture{
    class TodoItemPo{
        + Id: string
        + Description: string
        + IsComplete: bool
        + DueDate: DateOnly
        + CreateTime: DateOnly
        + ConvertToTodoItem(): TodoItem
    }
    class TodosRepository{
        - _todosCollection: IMongoCollection<TodoItemPo?>
        + FindByIdAsync(id: string?): TodoItem
        + CountTodoItemsByDueDate(dueDate: DateOnly): int
        + SaveAsync(TodoItem todoItem): void
    }
}
TodoItem "1" -- "0..*" Modification
TodoItemService "1" -- "0..*" TodoItem
TodoItemService "1" -- "1" ITodosRepository
User "1" -- "0..*" TodoItem
TodosRepository -- ITodosRepository
TodosRepository -- TodoItemPo
TodoItem -- Tag
@enduml